--- a/css/email-base-bubble.css
+++ b/css/email-base-bubble.css
@@ -50,6 +50,9 @@
   /* position: absolute;
   z-index: 1;
 } */
+.tooltiptext {
+    font-size: 14px;
+}
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
     visibility: visible;
@@ -96,6 +99,7 @@
   color: white;
   margin: 0 auto;
   border: 4px solid white;
+  display: grid;
 }
 /* Tooltip text */
 /* .tooltip .tooltiptext,
@@ -120,7 +124,7 @@ z-index: 1;
 	/* background: url(../images/shape1.svg) no-repeat center bottom; */
 	background-size: 100% 100%;
 	z-index: 9999;
-	width: 100%;/*200px*/
+	width: 150px;
 	bottom: 100%;
 	left: 50%;
 	margin-left: -100px;
@@ -129,7 +133,7 @@ z-index: 1;
 	color: #243e50;
 	opacity: 0;
 	cursor: default;
-	font-size: .8em;
+	/* font-size: .8em; */
 	line-height: 1.4;
 	pointer-events: none;
   font-family: "Glegoo", "Courier New", Courier, monospace;
@@ -155,6 +159,7 @@ radial-gradient(circle at 50% 55%, #fff, #add2dc);
 	transform: scale3d(1,1,1);
   
 }
+/* SHINE in the bubble */
 .tooltip-content::before {
   content: '';
   position: absolute;
@@ -174,12 +179,8 @@ radial-gradient(circle at 50% 55%, #fff, #add2dc);
   display: block;
   background: radial-gradient(circle at 130% 130%, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 46%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.8) 58%, rgba(255, 255, 255, 0) 60%, rgba(255, 255, 255, 0) 100%);
 }
-/* .tooltip-content.shine::after {
-  display: block;
-background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%);
-} */
 
-/* Arrow */
+/* Arrow - little bubble under tooltip */
 
 .tooltip-content::after {
 	content: '';
