--- a/css/modal.css
+++ b/css/modal.css
@@ -21,7 +21,7 @@
     border: 1px solid #888;
     width: 80%;
   }
-  .mistakes {
+  /* .mistakes {
       overflow: scroll;
       width: 950px;
       height: 300px;
@@ -29,7 +29,7 @@
   }
   .mistakes img {
       width: 933px;
-  }
+  } */
   /* The Close Button */
   .close {
     color: #aaaaaa;
