--- a/css/modal.css
+++ b/css/modal.css
@@ -1,3 +1,5 @@
+/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal */
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
