add ease in-out transition of img

--- a/css/email11.css
+++ b/css/email11.css
@@ -19,6 +19,13 @@
         margin-top: 75px;
         margin-bottom: 78px;
     }
+    .web1,
+    .web2{
+        -webkit-transition: opacity 0.4s, -webkit-transform 0.4s;
+        transition: opacity 0.4s, transform 0.4s;
+        -webkit-transition-timing-function: ease, cubic-bezier(0.6,0,0.4,1);
+        transition-timing-function: ease, cubic-bezier(0.6,0,0.4,1);
+    }
     .web1 {
         grid-area: img;
         position: relative;
@@ -27,10 +34,7 @@
     .web1:hover {
         transform: scale(2.5);
         z-index: 2;
-        /* -webkit-transition: opacity 0.4s, -webkit-transform 0.4s; */
-  
-        transition: opacity 0.4s, transform 0.4s;
-    }
+          }
     .web2 {
         grid-area: img2;
         position: relative;
@@ -39,9 +43,7 @@
     .web2:hover {
         transform: scale(2.5);
         z-index: 2;
-        transition: opacity 0.4s, transform 0.4s;
-
-    }
+          }
 
 .fone {
     width: 100%;
