add text wrap to bubbles

--- a/css/email-base-bubble.css
+++ b/css/email-base-bubble.css
@@ -52,6 +52,7 @@
 } */
 .tooltiptext {
     font-size: 14px;
+    overflow-wrap: break-word;
 }
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
