chg red hex code

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ html {
     --clr-ltgrey: #cfd3d7;
     --clr-grey: #4f606c;
     --clr-teal: #243e50;
-    --clr-red: #c82255;
-    --clr-green: #008181;
+    --clr-red: #BF0011;
+    --clr-green: #248181;
 
 }
 .teal-body {
