--- a/css/email-base-bubble.css
+++ b/css/email-base-bubble.css
@@ -55,7 +55,7 @@
     overflow-wrap: break-word;
 }
 /* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:active .tooltiptext {
+.tooltip:hover .tooltiptext {
     visibility: visible;
   }
 
@@ -153,7 +153,7 @@ radial-gradient(circle at 50% 55%, #fff, #add2dc);
 -2px -2px 10px #b1d6e0; */
 }
 
-.tooltip:active .tooltip-content {
+.tooltip:hover .tooltip-content {
 	opacity: 1;
 	pointer-events: auto;
 	-webkit-transform: scale3d(1,1,1);
