back to orig 'red' (more pink)

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
     --clr-ltgrey: #cfd3d7;
     --clr-grey: #4f606c;
     --clr-teal: #243e50;
-    --clr-red: #BF0011;
+    --clr-red: #c82255;/*#BF0011*/
     --clr-green: #248181;
 
 }
