disabled the certMultClick in css

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ html {
     background-color: var(--clr-grey);
 }
 
-#tryAgain ,#certBtn {
+#tryAgain, #certBtn, #certMultClick {
     display: none;
 }
 
