--- a/css/kelp.css
+++ b/css/kelp.css
@@ -2078,7 +2078,9 @@ a{
 	margin: 10px;
 	position: absolute;
 	/* top:.3px; */
-    top:400px;
+    /* top:400px; */
+	/* top: 87%; */
+	bottom: 70px;
 	width: 100px;
 	z-index: 98;
     opacity: .5;
@@ -2094,7 +2096,8 @@ a{
 	margin: auto;
 	position: absolute;
 	/* top: 56px; */
-    top: 500px;
+    /* top: 500px; */
+	bottom: 40px;
 	width: 100px;
 	z-index: 25;
     opacity: .3;
