--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,48 @@ html {
     --clr-green: #248181;
 
 }
+@media screen and (max-width:619px){
+    :root {
+        --fs-h1: 2.25em;
+    }
+}
+@media screen and (max-width:479px){
+    :root {
+        --fs-h1: 2em;
+    }
+}
+@media screen and (max-width:433px){
+    :root {
+        --fs-h1: 1.7em;
+    }
+}
+@media screen and (max-width: 380px){
+    :root {
+        --fs-h1: 1.5em;
+    }
+}
+
+@media screen and (max-width:799px){
+body {
+    background: var(--clr-teal);
+}
+}
 .teal-body {
     /* background: #001C34; */
-    background-color: var(--clr-ltgrey);
+    background-color: var(--clr-teal);
     /* max-height: 100vh; */
-    max-width: 1100px;
-    max-height: 100vh;
-    /* max-width:90vw; */
+    /* max-width: 1100px; */
+    height: 100vh;
+    max-width:70vw;
+    /* margin: 0 auto;
+    display: block; */
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
-    display: block;
     /* margin-left: auto;
     margin-right: auto; */
-    /* padding: 0;
-    scroll-behavior:smooth;
+   padding: 0 30px;
+       /* scroll-behavior:smooth;
     overflow: visible !important; */
     color: var(--clr-white);
     font-family: "Be Vietnam Pro", sans-serif;
@@ -41,6 +70,27 @@ html {
     left: 0;
     right: 0;
     z-index: 1;
+}
+@media screen and (max-width:799px){
+    .teal-body{
+        max-width: 100%;
+        /* height: unset; */
+    }
+}
+.quiz-header {
+    background-color: var(--clr-teal);
+}
+.quiz-header--toolbar {
+    padding: 20px 0px;
+
+}
+.quiz-header--toolbar img {
+    width: 15%;
+    min-width: 150px;
+}
+.expand {
+    flex: 1 1 auto;
+    background-color: var(--clr-teal);
 }
 .pBarContainer {
     /* border: 3px solid black; */
@@ -118,13 +168,25 @@ p {
 }
 .content {
     background: var(--clr-teal);
-    min-height: 100vh;
-    margin: 0 auto;
+    /* min-height: 100vh;
+    margin: 0 auto; */
+box-sizing: border-box;
+position: relative;
+width: 100%;
+max-width: 1000px;
+margin: 0 auto;
+}
+@media (min-width: 1020px) and (min-height: 600px){
+.content {
+  padding: 0;
+  text-align: left;
+  align-content: center;
+}
 }
 
 .content__section {
-    max-width: 900px;
-    margin: 0 auto;
+    /* max-width: 900px;
+    margin: 0 auto; */
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-areas:
@@ -132,7 +194,20 @@ p {
         "text img"
         "button img";
     position: relative;
-    padding-top: 150px;
+    /* padding-top: 150px; */
+}
+@media screen and (max-width:1200px) and (min-width: 800px){
+    .content__section{
+        grid-template-columns: 1fr 1fr 1fr;
+grid-template-areas: "title title title" "text text img" "button button button";
+    }
+    
+}
+@media screen and (max-width:799px) {
+    .content__section{
+        grid-template-columns: 1fr;
+        grid-template-areas: "img" "title" "text" "button";
+        }
 }
 .content__section#pgSignUp {
     padding-top: 50px;
@@ -155,12 +230,28 @@ p {
     grid-area: text;
     padding-right: 4em;
 }
+@media screen and (max-width: 799px){
+    .content__section--text{
+        padding-right: 0;
+    }
+}
 
 .content__section--img-container {
     grid-area: img;
-    margin-right: -25px;
+    /* margin-right: -25px; */
+    justify-content: center;
+display: grid;
 }
-
+@media screen and (max-width: 799px){
+    .content__section--img-container{
+        margin-bottom: 30px;
+    }
+}
+@media screen and (max-width: 339px){
+    .responsiveImage {
+        width: 200px;
+}
+}
 .content__section--button {
     grid-area: button;
     margin-top: 30px;
@@ -313,7 +404,10 @@ p {
 .form-questions label {
     margin-right: 2em;
 }
-
+#certMultClick {
+    font-size: .7em;
+    margin-top: 30px;
+}
 /* .content__section--pages{
     text-align: center;
 } */
@@ -335,6 +429,10 @@ input[type="radio"] {
 footer {
     position: absolute; 
     bottom: 0;
-    padding: 20px 30px;
+    padding: 20px 0;
 }
-
+@media screen and (max-width:799px){
+    footer {
+        position: static;
+    }
+}
