--- a/css/email-base-bubble.css
+++ b/css/email-base-bubble.css
@@ -84,7 +84,14 @@
     display: block;
     margin: 30px auto;
     height: 365px;
+    width: 100%;
   }
+@media only screen and (max-width: 1281px) {
+    iframe {
+        height: 250px;
+}
+}
+
   /* Tooltip container */
   .tooltip {
     display: inline;
