--- a/css/email11.css
+++ b/css/email11.css
@@ -4,11 +4,9 @@
     background: none;  }
   
     /* Tooltip button*/
-.section__answer h1 {
+.real__answer h1 {
     display: grid;
     justify-content: center;
-    /* font-size: 2em;
-    margin-top: 53px; */
 }  
     .webpage {
         display: grid;
