--- a/css/email-base-bubble.css
+++ b/css/email-base-bubble.css
@@ -82,9 +82,12 @@
   }
   iframe {
     display: block;
-    margin: 30px auto;
-    height: 365px;
+    /* margin: 30px auto;
+    height: 365px; */
     width: 100%;
+    margin: 20px auto;
+    height: 350px;
+  
   }
 @media only screen and (max-width: 1281px) {
     iframe {
