--- a/css/email10.css
+++ b/css/email10.css
@@ -4,6 +4,43 @@
     margin: 0 auto;
     font-size: 1em;
   }
+  .em-template h1,
+.em-template h2,
+.em-template h3,
+.em-template h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight:200;
+} 
+.em-from-div {
+  display: grid;
+  grid-template-columns: 1fr 11fr;
+  grid-template-areas:
+    "dot from"
+    "dot date"
+    "to to";
+}
+.em-dot {
+  grid-area: dot;
+  background-color: #fd6823;
+}
+.em-from {
+  grid-area: from;
+}
+.em-date {
+  grid-area: date;
+}
+.em-to {
+  grid-area: to;
+}
+.em-br {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .em-br {
+    display: block;
+  }
+}
+
   /* Tooltip button*/
   .tooltip .tooltiptext {
       background-color: #ebebeb;
