--- a/css/email4.css
+++ b/css/email4.css
@@ -4,6 +4,59 @@
     margin: 0 auto;
     font-size: .7em;
 }
+.em-template h1,
+.em-template h2,
+.em-template h4 {
+  font-family: Arial, Helvetica, sans-serif;
+}  
+/* specific to email4 */
+.em-template h1 {
+  background: rgb(61, 112, 232);
+  padding: 20px;
+  margin: 20px 0;
+  text-align: center;
+  color: white;
+}
+.body {
+  /* email4 specific */
+      border: 2px solid rgb(61, 112, 232);
+      max-width: 700px;
+      margin: 0 100px;
+  }
+     
+.em-from-div {
+  display: grid;
+  grid-template-columns: 1fr 11fr;
+  grid-template-areas:
+    "dot from"
+    "dot date"
+    "to to";
+}
+.em-dot {
+  grid-area: dot;
+  background-color: #023890;
+}
+.em-from {
+  grid-area: from;
+}
+.em-date {
+  grid-area: date;
+}
+.em-to {
+  grid-area: to;
+}
+    
+/* dot with initials / re / to / from */
+.em-dot span {
+  position: relative;
+  top: 11px;
+  left: 9px;/*to center initials in dot*/
+  color: white;
+}
+  .em-from-div h4 {
+/* email4 specific */
+  max-width: 500px;
+}
   /* Tooltip button*/
     /* email4 specific */
     .tooltip-button {
@@ -11,40 +64,7 @@
     background-color: rgb(2, 171, 41);
     font-size: large;
 }
-    
-        /* dot with initials / re / to / from */
-        .em-dot {
-          background-color: #023890;
-        }
-        .em-dot span {
-          position: relative;
-          top: 11px;
-          left: 9px;/*to center initials in dot*/
-          color: white;
-        }
-          .em-from-div h4 {
-      /* email4 specific */
-          max-width: 500px;
-        }
   
-       .body {
-      /* email4 specific */
-          border: 2px solid rgb(61, 112, 232);
-          max-width: 700px;
-          margin: 0 100px;
-      }
-        /* specific to email4 */
-  .em-template h1 {
-    background: rgb(61, 112, 232);
-    padding: 20px;
-    margin: 20px 0;
-    text-align: center;
-    color: white;
-  }
-  h4.em-dot-date {
-    display: block;
-    margin: -15px 80px 0px;
-   }
 
       .tjx-synchrony {
           display: inline-block;
