--- a/css/email9.css
+++ b/css/email9.css
@@ -27,7 +27,7 @@
           top: 8px;
           left: 12px;/*to center initials in dot*/
         }
-        h4.em-dot-date {
+        h4.em-date {
           display: block;
           margin: -15px 80px 0px;
          }
