--- a/css/email-base-bubble.css
+++ b/css/email-base-bubble.css
@@ -112,6 +112,12 @@
   border: 4px solid white;
   display: grid;
 }
+@media  screen and (max-width: 500px) {
+  .tooltip-button {
+    width: 90vw;
+  }
+}
+
 /* Tooltip text */
 /* .tooltip .tooltiptext,
 .tooltip-button .tooltiptext {
