--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,8 @@ p {
 
 #tryAgain,
 #certBtn,
-#certMultClick {
+#certMultClick,
+#over80img {
     display: none;
 }
 
@@ -350,7 +351,7 @@ p {
     position: relative;
     width: 100%;
     /* max-width: 1000px; */
-    max-width: 50vw;
+    max-width: 55vw;
     margin: 0 auto;
 }
 @media screen and (min-width: 2000px){
